How did this get missing?
git-svn-id: http://current.tigris.org/svn/current/trunk@207 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,8 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
 
 <ul>
 
+    <li><p><b><a href="faq.html">Current FAQ</a></b></p></li>
+
     <li><p><b><a href="current-guide/">Current Manual</a> - </b>This is the
     manual as shipped with 1.6.0.  This should contain full blown
     instructions for everything in Current.  Of course it doesn't, but
