Web site updates for 1.7.3
git-svn-id: http://current.tigris.org/svn/current/trunk@244 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -40,13 +40,19 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[07 July 2006] Current 1.7.3</b>
+    <p>Lots of churn.  No more web interface.  There are better ways
+    to do that than what I had done.  No more makefiles, we now use Python's
+    distutils.  First shot at authenticated, tracked clients and multiple
+    channels.</p></li>
+
     <li><b>[23 Jul 2005] Current 1.6.1</b>
     <p>A new release in the stable 1.6 series.  This fixes a few bugs from
     Issue Tracker and adds support for versions of Up2date that ship with Fedora
     Core 4.</p></li>
     
     <li><b>[29 May 2005] Current 1.7.2</b>
-    <img src="screenshot01.jpg" align="right" />
+    <!--<img src="screenshot01.jpg" align="right" />-->
     <p>This version lays out some examples, classes and templates for
     creating a web interface.  Even have some CSS.  Folks, this is where the 
     fun starts.</p></li>
