Update my FTP site's location.
git-svn-id: http://current.tigris.org/svn/current/trunk@245 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
 <a href="ftp://ftp.biology.duke.edu/admin/current">ftp://ftp.biology.duke.edu/admin/current</a></p></li>
 
 <li><p><b>Jack's Current FTP repository: </b>
-<a href="ftp://ftp.quackmaster.net/current">ftp://ftp.quackmaster.net/current</a>
+<a href="ftp://ftp.linuxczar.net/pub/current">ftp://ftp.linuxczar.net/pub/current</a>
 </p></li>
 
 </ul>
