--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,8 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
     <p>Lots of churn.  No more web interface.  There are better ways
     to do that than what I had done.  No more makefiles, we now use Python's
     distutils.  First shot at authenticated, tracked clients and multiple
-    channels.</p></li>
+    channels.  See the <a href="http://current.tigris.org/servlets/ReadMsg?list=announce&msgNo=15">
+    release announcement</a> for full details.</p></li>
 
     <li><b>[23 Jul 2005] Current 1.6.1</b>
     <p>A new release in the stable 1.6 series.  This fixes a few bugs from
@@ -124,10 +125,8 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
 <h3>Dependencies</h3>
 
 <p><b>New for Current 1.7 - </b> Current versions 1.7 and up require
-mod_python 3.1 and Python 2.3.  It should be possible to get Current
-working with Python 2.2 (or 2.0?) if you install the <tt>logging</tt>
-module and the <tt>sets</tt> module.  Current should be able to run 
-out of the box on RHEL 4, RHEL 4 rebuilds, and FC2 or better.</p>
+mod_python 3.1 and Python 2.3.  Current should be able to run 
+out of the box on RHEL 4, RHEL 4 rebuilds, and FC3 or better.</p>
 
 <p><b>All Current Versions - </b> Current does require a few things to run.  
 Fortunately, any of the Red 
