Web site updates for 1.7.4
git-svn-id: http://current.tigris.org/svn/current/trunk@253 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
 
 <h3>Features</h3>
 <ul>
-    <li>Production quality Up2date server for 2.7 to 4.4 clients with a Fedora Core 1, 2, 3, 4, or Red Hat Enterprise Linux 3, or 4 server.</li>
+    <li>Production quality Up2date server for 2.7 to 4.4 clients with a Fedora Core 1, 2, 3, 4, 5 or Red Hat Enterprise Linux 3, or 4 server.</li>
     <li>Full SQL database backend.</li>
     <li>Web Interface in the devel series.</li>
     <li>As easy to setup for the admin as we can make it.</li>
@@ -39,6 +39,12 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
 
 <h3>Recent News</h3>
 <ul>
+
+    <li><b>[06 August 2006] Current 1.7.4</b>
+    <p>Basic support for Yum is included.  The repositories have Yum's repomd
+    metadata added and a Yum plugin exists that will register a client
+    and allow the client to download files from the Current server.  Requires
+    Yum 2.9.3 or better.</p></li>
 
     <li><b>[07 July 2006] Current 1.7.3</b>
     <p>Lots of churn.  No more web interface.  There are better ways
@@ -52,18 +58,6 @@ excellent up2date tools and be able to scale to thousands of machines.</p>
     Issue Tracker and adds support for versions of Up2date that ship with Fedora
     Core 4.</p></li>
     
-    <li><b>[29 May 2005] Current 1.7.2</b>
-    <!--<img src="screenshot01.jpg" align="right" />-->
-    <p>This version lays out some examples, classes and templates for
-    creating a web interface.  Even have some CSS.  Folks, this is where the 
-    fun starts.</p></li>
-    
-    <li><b>[04 Apr 2005] Current 1.7.1</b>
-    <p>Kick off a new development branch with Current 1.7.1.  The code
-    changes are mostly the beginnings of some ideas right now.  Most
-    notable is the changes in the cadmin tool.  Right now, only
-    the SQLite database is supported.</p></li>
-
     <li><b>[21 Mar 2005] Current 1.6.0 Final</b>
     <p>Its here!  Current 1.6.0 Final.  Only some documentation
     tweeks when compared to 1.5.91.  Y'all let me know how it
