Wow...that mission statement was on crack.  Try this for now.
git-svn-id: http://current.tigris.org/svn/current/trunk@256 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -20,12 +20,12 @@
 
 <h3>Mission</h3>
 
-<p>To create an open source Advanced Management System for Linux machines.  
-This is a web based system administrator's tool that is capable of deploying
-package updates and errata and managing the state of each client.  Ideally,
-we want to be what cfengine is to configuration files to state management.
-A part of this is to implement a correct server for all of Red Hat's
-excellent up2date tools and be able to scale to thousands of machines.</p>
+<p>To create an Open Source package management server for RPM based 
+distributions.  Our aim is to be able to do what the Red Hat Network did for
+Red Hat products to any Linux distribution.
+A part of this is to implement a server for Red Hat's
+up2date tools, extend the functionality of Yum, and be able to scale to 
+thousands of machines.</p>
 
 
 <h3>Features</h3>
