--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,12 @@ thousands of machines.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[23 September 2006] Current 1.7.6</b>
+    <p>The code path for scanning channels was busted in 1.7.5 so here is
+    1.7.6.  This also has some code to reconnect to MySQL when the database
+    connection times out.  The database records more meta information about
+    each client and that is reflected in the TG web interface.</p></li>
+
     <li><b>[14 September 2006] Current 1.7.5</b>
     <p>Current now has user authentication (but not authorization yet).
     To use the <tt>cadmin.py</tt> command you must first login by using
