Remove the old TG startup script.  Advertise on the web page about working on the TG parts of Current...'cause I need the help.
git-svn-id: http://current.tigris.org/svn/current/trunk@309 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,13 @@ thousands of machines.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[1 November 2006] Help with TurboGears</b>
+    <p>The Current project is looking for someone that would like to work
+    on the <a href="http://www.turbogears.org/index.html">TurboGears</a>
+    web interface.  Especially web design and looking up the TG controllers
+    to the Current API.  If you are interested please email the 
+    developers' list.</p></li>
+
     <li><b>[23 September 2006] Current 1.7.6</b>
     <p>The code path for scanning channels was busted in 1.7.5 so here is
     1.7.6.  This also has some code to reconnect to MySQL when the database
