--- a/www/screenshots.html
+++ b/www/screenshots.html
@@ -18,8 +18,12 @@ you are redirected to the login page.</p>
 
 <img src="systemDetail.png" />
 
-<p>The detail page for a registered system.  The System Status and Last
-Checkin Time are not recorded in the database as of 1.7.5.</p>
+<p>The detail page for a registered system.</p>
+
+<img src="hieracracy.png" />
+
+<p>Systems are grouped in a hieracracy tree.  System administrators can
+modify systems in their assinged node and in child nodes.</p>
 
 </body>
 </html>
