And fix the typos...
git-svn-id: http://current.tigris.org/svn/current/trunk@313 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@ thousands of machines.</p>
 
 <ul>
 
-    <li><p><b><a href="screenshots.html">Screenshots</a></p></li>
+    <li><p><b><a href="screenshots.html">Screenshots</a></b></p></li>
 
     <li><p><b><a href="faq.html">Current FAQ</a></b></p></li>
 
