Replace the horrid mission statement and some other small corrections and additions to the web page.
git-svn-id: http://current.tigris.org/svn/current/trunk@314 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -20,19 +20,25 @@
 
 <h3>Mission</h3>
 
-<p>To create an Open Source package management server for RPM based 
-distributions.  Our aim is to be able to do what the Red Hat Network did for
-Red Hat products to any Linux distribution.
-A part of this is to implement a server for Red Hat's
-up2date tools, extend the functionality of Yum, and be able to scale to 
-thousands of machines.</p>
-
+<p>
+Originally, Current was designed to be an open source Red Hat Network (RHN) 
+server. Today, the Current developers believe in creating a much more 
+powerful and useful tool. We believe that there is value in strongly 
+authenticated package repositories, an advanced web management interface, 
+client tracking tools, and a flexible system for grouping and permissions. 
+Many of the exiting management tools limit our freedom as they are 
+controlled by corporations and closed source. Other open source tools 
+lack strong authentication and management features. Simply, we believe 
+that the Open Source community can create a significantly more useful 
+management and deployment tool.
+</p>
 
 <h3>Features</h3>
 <ul>
-    <li>Production quality Up2date server for 2.7 to 4.4 clients with a Fedora Core 1, 2, 3, 4, 5 or Red Hat Enterprise Linux 3, or 4 server.</li>
+    <li>Production quality Up2date server for 2.7 to 4.4 clients with a Fedora Core 5 and 6 or Red Hat Enterprise Linux 3, or 4 server.</li>
     <li>Full SQL database backend.</li>
     <li>TurboGears Web Interface in the devel series.</li>
+    <li>Yum support in the devel series.</li>
     <li>As easy to setup for the admin as we can make it.</li>
 </ul>
 
