Correct misspelled word in website.
git-svn-id: http://current.tigris.org/svn/current/trunk@316 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@ server. Today, the Current developers believe in creating a much more
 powerful and useful tool. We believe that there is value in strongly 
 authenticated package repositories, an advanced web management interface, 
 client tracking tools, and a flexible system for grouping and permissions. 
-Many of the exiting management tools limit our freedom as they are 
+Many of the existing management tools limit our freedom as they are 
 controlled by corporations and closed source. Other open source tools 
 lack strong authentication and management features. Simply, we believe 
 that the Open Source community can create a significantly more useful 
